[gd_scene load_steps=5 format=3 uid="uid://brujhokdywi1o"]

[ext_resource type="Script" uid="uid://bsay6m7ydpje7" path="res://scripts/objects/button.gd" id="1_mi6dp"]
[ext_resource type="Texture2D" uid="uid://dc2koi0inlm5g" path="res://assets/sprites/button.png" id="2_rhj8v"]
[ext_resource type="AudioStream" uid="uid://yy8d2agj8hqs" path="res://assets/audios/button.wav" id="3_e5cij"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n4pas"]
size = Vector2(4, 12)

[node name="Button" type="StaticBody2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource("1_mi6dp")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_rhj8v")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n4pas")

[node name="PressedTimer" type="Timer" parent="."]
wait_time = 0.06
one_shot = true

[node name="PressedAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_e5cij")
volume_db = 7.0
pitch_scale = 0.95
bus = &"Sounds"

[connection signal="timeout" from="PressedTimer" to="." method="_on_pressed_timer_timeout"]
